# UAE-Inspection-Agents

./: pyproject.toml  requirements.txt
main_agent/: agent.py
main_agent/agents/: analysis_agents.py  evaluation_agent.py  pdf_agent.py  refinement_agents.py  report_writer_agent.py  synthesis_agent.py
main_agent/core/: config.py
main_agent/orchestrators/: main_orchestrator.py
main_agent/prompts/: instructions.py
main_agent/tools/: date_tool.py  pdf_generator.py  rag_orchestrator.py
scripts/: collection_creation.py
ui/: app.py
